<resources>
    <string name="app_name">Movie Night</string>
    <string name="adresse_courriel">Adresse courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connexion">Connexion</string>
    <string name="we_re_in">we\'re in</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="nom_d_utilisateur">"Nom d'utilisateur"</string>
    <string name="vous_avez_d_j_un_compte_connectez_vous">Vous avez déjà un compte? Connectez vous</string>
    <string name="inscription">Inscription</string>
    <string name="cr_er_mon_compte">Créer mon compte</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="identifiant_unique">Identifiant unique</string>
    <string name="nom">Nom</string>
    <string name="identifiant">Identifiant</string>
    <string name="courriel">Courriel</string>
    <string name="textview">TextView</string>
    <string name="gear">gear</string>
    <string name="profil">Profil</string>
    <string name="confirmer">Confirmer</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_movie_session">Sessions de visonnement</string>
    <string name="start_new_movie_session">+ Commencer une nouvelle séance</string>
    <string name="movie_session_name">Donnez un nom au groupe</string>
    <string name="add_contact_to_group">Cochez les contacts à inviter à la séance de visionnement</string>
    <string name="prenium_message">Cliquez-ici pour consulter votre abonnement !</string>
    <string name="consulter">Consulter</string>
    <string name="sabonner">"S'abonner"</string>
    <string name="hello_world">Help!</string>

</resources>