<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentification.Login">

    <TextView
        android:id="@+id/seConnecter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/connexion"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="313dp"
        android:layout_height="47dp"
        android:layout_marginTop="300dp"
        android:drawableEnd="@drawable/ic_email"
        android:drawableRight="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/adresse_courriel"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#FFFF4444"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/login_mdp"
        android:layout_width="313dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="104dp"
        android:drawableEnd="@drawable/ic_pass"
        android:drawableRight="@drawable/ic_pass"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        android:backgroundTint="#FFFF4444"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:text="@string/se_connecter"
        android:textColor="@color/white"
        app:backgroundTint="#FF4444"
        app:layout_constraintBottom_toTopOf="@+id/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/cr_er_un_compte"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/smartBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>